--- a/public/index.html
+++ b/public/index.html
@@ -66,12 +66,13 @@
 						</tr>
 					</thead>
 					<tbody>
-						<td>Example.txt</td>
+						<!--<td>Example.txt</td>
 						<td><button class="btn black white-text waves waves-effect waves-light">Open</button></td>
 						<td><i class="small material-icons">delete</i></td>
-						<td><i class="small material-icons">file_download</i></td>
+						<td><i class="small material-icons">file_download</i></td>-->
 					</tbody>
 				</table>
+				No files to display...
 			</div>
 		</div>
 
